--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ modelscope>=1.13.0
 # pandas>=2.0.0
 json5>=0.9.16
 munch>=4.0.0
-descript-audiotools
+git+https://github.com/descriptinc/audiotools@0.7.4#egg=descript-audiotools
 einops
 ffmpy
 docstring-parser
